--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -35,5 +35,8 @@
   },
   "aws_cognito_verification_mechanisms": [
     "EMAIL"
-  ]
+  ],
+  "aws_appsync_graphqlEndpoint": "https://gj3enzgrgvhufk5imqqbf442ny.appsync-api.eu-west-2.amazonaws.com/graphql",
+  "aws_appsync_region": "eu-west-2",
+  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS"
 }
