--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -52,5 +52,30 @@
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
     }
+  },
+  "function": {
+    "adminCreateUser": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_adminCreateUser_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminCreateUser"
+        }
+      ]
+    },
+    "AMPLIFY_function_adminCreateUser_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminCreateUser"
+        }
+      ]
+    }
   }
 }
