Add admin forms and list components for managing academic entities
- Implemented AddSubjectForm for creating new subjects with class selection.
- Created CreateAcademicYearForm for adding academic years.
- Developed CreateClassForm to facilitate class creation with teacher and school selection.
- Added CreateSchoolForm for creating new schools.
- Implemented CreateTermForm for managing academic terms.
- Developed ListAcademicYears component to display all academic years.
- Created ListAnnouncements to show announcements.
- Added ListAssessments for viewing assessments.
- Implemented ListAttendance for tracking attendance records.
- Developed ListClasses to display all classes.
- Created ListGrades for viewing student grades.
- Added ListParents to show parent users.
- Implemented ListStudents for displaying student records.
- Developed ListSubjects to show all subjects.
- Created ListTeachers to display teacher users.
- Implemented ListTerms for viewing academic terms.
- Added ListUsers to show all users in the system.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/api": "^6.3.13",
+    "@aws-amplify/api-graphql": "^4.7.17",
+    "@aws-amplify/auth": "^6.13.1",
+    "@aws-amplify/core": "^6.12.1",
     "@aws-amplify/ui-react": "^6.11.2",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/system": "^7.1.1",
+    "@mui/x-data-grid": "^8.6.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
