I am tryinf Trae

--- a/amplify/#current-cloud-backend/backend-config.json
+++ b/amplify/#current-cloud-backend/backend-config.json
@@ -1,19 +1,5 @@
 {
   "api": {
-    "adminUpdateUserAttribute": {
-      "dependsOn": [
-        {
-          "attributes": [
-            "Name",
-            "Arn"
-          ],
-          "category": "function",
-          "resourceName": "adminUpdateUserAttribute"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "API Gateway"
-    },
     "edumanagesaas": {
       "dependsOn": [
         {
@@ -26,16 +12,7 @@
       ],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [
-            {
-              "apiKeyConfig": {
-                "apiKeyExpirationDate": "2025-07-04T03:49:50.598Z",
-                "apiKeyExpirationDays": 7,
-                "description": "access to AppSync"
-              },
-              "authenticationType": "API_KEY"
-            }
-          ],
+          "additionalAuthenticationProviders": [],
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
@@ -59,7 +36,7 @@
         ],
         "passwordProtectionSettings": {
           "passwordPolicyCharacters": [],
-          "passwordPolicyMinLength": "6"
+          "passwordPolicyMinLength": 8
         },
         "signupAttributes": [
           "EMAIL"
@@ -81,34 +58,6 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
-    },
-    "adminUpdateUserAttribute": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "edumanagesaasda694ea8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
-    },
-    "adminUpdateUserAttributes": {
-      "build": true,
-      "dependsOn": [
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "edumanagesaasda694ea8"
-        }
-      ],
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda"
     }
   },
   "parameters": {
@@ -125,46 +74,6 @@
         {
           "category": "function",
           "resourceName": "adminCreateUser"
-        }
-      ]
-    },
-    "AMPLIFY_function_adminUpdateUserAttribute_authEdumanagesaasda694Ea8Userpoolid": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "adminUpdateUserAttribute"
-        }
-      ]
-    },
-    "AMPLIFY_function_adminUpdateUserAttribute_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "adminUpdateUserAttribute"
-        }
-      ]
-    },
-    "AMPLIFY_function_adminUpdateUserAttribute_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "adminUpdateUserAttribute"
-        }
-      ]
-    },
-    "AMPLIFY_function_adminUpdateUserAttributes_deploymentBucketName": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "adminUpdateUserAttributes"
-        }
-      ]
-    },
-    "AMPLIFY_function_adminUpdateUserAttributes_s3Key": {
-      "usedBy": [
-        {
-          "category": "function",
-          "resourceName": "adminUpdateUserAttributes"
         }
       ]
     }
