--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -1,6 +1,6 @@
 {
   "aws_project_region": "eu-west-2",
-  "aws_cognito_identity_pool_id": "eu-west-2:c1acaad4-9d0c-4151-9ef4-e88520dcdc40",
+  "aws_cognito_identity_pool_id": "eu-west-2:67ed7571-ddfb-4fef-a876-33ab8a36d670",
   "aws_cognito_region": "eu-west-2",
   "aws_user_pools_id": "eu-west-2_OuXc4ZpsU",
   "aws_user_pools_web_client_id": "2ojmkpj241a2jmsd02scen1eck",
@@ -13,9 +13,9 @@
       "profile",
       "aws.cognito.signin.user.admin"
     ],
-    "redirectSignIn": "http://localhost/,http://localhost/",
+    "redirectSignIn": "http://localhost/",
     "redirectSignOut": "https://localhost/",
-    "responseType": "token"
+    "responseType": "code"
   },
   "federationTarget": "COGNITO_USER_POOLS",
   "aws_cognito_username_attributes": [
@@ -30,7 +30,7 @@
     "SMS"
   ],
   "aws_cognito_password_protection_settings": {
-    "passwordPolicyMinLength": "6",
+    "passwordPolicyMinLength": 8,
     "passwordPolicyCharacters": []
   },
   "aws_cognito_verification_mechanisms": [
@@ -38,13 +38,5 @@
   ],
   "aws_appsync_graphqlEndpoint": "https://gj3enzgrgvhufk5imqqbf442ny.appsync-api.eu-west-2.amazonaws.com/graphql",
   "aws_appsync_region": "eu-west-2",
-  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS",
-  "aws_appsync_apiKey": "da2-s3eb3ixtgbbghaerjab7qqeoje",
-  "aws_cloud_logic_custom": [
-    {
-      "name": "adminUpdateUserAttribute",
-      "endpoint": "https://ftrdns136f.execute-api.eu-west-2.amazonaws.com/dev",
-      "region": "eu-west-2"
-    }
-  ]
+  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS"
 }
