--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/api": "^6.3.13",
+    "@aws-amplify/auth": "^6.13.3",
     "@aws-amplify/ui-react": "^6.11.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
