--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "aws-amplify": "^6.15.1",
+    "aws-amplify": "^6.15.3",
     "axios": "^1.10.0",
     "graphql": "^16.11.0",
     "node-fetch": "^2.7.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
