Refactor admin forms and add school landing page
- Updated AcademicYearForm to simplify state management and improve UI with MUI components.
- Refactored RecordAttendance to accept classID and students as props, enhancing reusability.
- Enhanced SchoolSetup form with additional fields and improved error handling.
- Revamped TermForm to utilize MUI components and streamline submission logic.
- Implemented CreateSchoolPage with comprehensive form handling and validation.
- Added SchoolLandingPage to display school information based on subdomain.
- Introduced user group precedence configuration for better role management.
- Updated AppRoutes to include the new SchoolLandingPage route.

--- a/amplify/#current-cloud-backend/backend-config.json
+++ b/amplify/#current-cloud-backend/backend-config.json
@@ -51,6 +51,21 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    },
+    "userPoolGroups": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId",
+            "AppClientIDWeb",
+            "AppClientID"
+          ],
+          "category": "auth",
+          "resourceName": "edumanagesaasda694ea8"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Cognito-UserPool-Groups"
     }
   },
   "function": {
@@ -74,6 +89,46 @@
         {
           "category": "function",
           "resourceName": "adminCreateUser"
+        }
+      ]
+    },
+    "AMPLIFY_function_adminUpdateUserAttribute_authEdumanagesaasda694Ea8Userpoolid": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminUpdateUserAttribute"
+        }
+      ]
+    },
+    "AMPLIFY_function_adminUpdateUserAttribute_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminUpdateUserAttribute"
+        }
+      ]
+    },
+    "AMPLIFY_function_adminUpdateUserAttribute_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminUpdateUserAttribute"
+        }
+      ]
+    },
+    "AMPLIFY_function_adminUpdateUserAttributes_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminUpdateUserAttributes"
+        }
+      ]
+    },
+    "AMPLIFY_function_adminUpdateUserAttributes_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "adminUpdateUserAttributes"
         }
       ]
     }
