--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -15,7 +15,7 @@
     ],
     "redirectSignIn": "http://localhost/",
     "redirectSignOut": "https://localhost/",
-    "responseType": "code"
+    "responseType": "token"
   },
   "federationTarget": "COGNITO_USER_POOLS",
   "aws_cognito_username_attributes": [
