--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -38,5 +38,6 @@
   ],
   "aws_appsync_graphqlEndpoint": "https://gj3enzgrgvhufk5imqqbf442ny.appsync-api.eu-west-2.amazonaws.com/graphql",
   "aws_appsync_region": "eu-west-2",
-  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS"
+  "aws_appsync_authenticationType": "AMAZON_COGNITO_USER_POOLS",
+  "aws_appsync_apiKey": "da2-rrmo22oclfhfhmyoqgzanq4e2u"
 }
