--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@aws-amplify/api": "^6.3.13",
     "@aws-amplify/auth": "^6.13.3",
+    "@aws-amplify/storage": "^6.9.3",
     "@aws-amplify/ui-react": "^6.11.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.2",
-    "@mui/material": "^7.1.2",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@mui/system": "^7.1.1",
     "@mui/utils": "^7.1.1",
+    "@mui/x-data-grid": "^8.8.0",
+    "@mui/x-date-pickers": "^8.8.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -22,6 +25,7 @@
     "@types/react-dom": "^19.1.6",
     "aws-amplify": "^6.15.3",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
