--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.29.3",
     "graphql": "^16.11.0",
     "node-fetch": "^2.7.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
@@ -62,6 +63,8 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/lodash": "^4.17.20",
+    "@types/papaparse": "^5.3.16",
     "@types/react-router-dom": "^5.3.3"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
